[project]
name = "dagonlayer"
version = "0.1.0"
description = "A configuration-driven, deterministic, multi-agent orchestration engine."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "timBrockman" }
]
classifiers = [
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
keywords = ["workflow", "orchestration", "multi-agent", "pydantic", "llm"]

[project.urls]
"Homepage" = "https://github.com/timBrockman/dagonlayer"
"Repository" = "https://github.com/timBrockman/dagonlayer"

dependencies = [
  "python-dotenv >= 1.0.0",
  "pyyaml>=6.0",
  "pydantic>=2.0",
  "pydantic-ai>=0.1.0",
  "openai>=1.0.0"
]
[project.optional-dependencies]
test = [
  "pytest",
  "pytest-asyncio"
]

[build-system]
requires = ["setuptools>=65.0.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project.scripts]
dagonlayer = "dagonlayer.main:run"
